Added citation and DOI

--- a/spillover-of-violence/spillover-of-violence.qmd
+++ b/spillover-of-violence/spillover-of-violence.qmd
@@ -26,6 +26,9 @@ share:
   email: true
   mastodon: true
   bsky: true
+bibliography: spillover-of-violence.bib
+nocite: |
+  @Ma2025
 ---
 
 ```{r}
