--- a/be-less-wrong/be-less-wrong.bib
+++ b/be-less-wrong/be-less-wrong.bib
@@ -92,3 +92,47 @@ model building},
   url = {https://www.demographic-research.org/volumes/vol32/23/},
   year = {2015},
 }
+
+@article{Elwert2014,
+   abstract = {Endogenous selection bias is a central problem for causal inference. Recognizing the problem, however, can be difficult in practice. This article introduces a purely graphical way of characterizing endogenous selection bias and of understanding its consequences (Hernán et al. 2004). We use causal graphs (direct acyclic graphs, or DAGs) to highlight that endogenous selection bias stems from conditioning (e.g., controlling, stratifying, or selecting) on a so-called collider variable, i.e., a variable that is itself caused by two other variables, one that is (or is associated with) the treatment and another that is (or is associated with) the outcome. Endogenous selection bias can result from direct conditioning on the outcome variable, a post-outcome variable, a post-treatment variable, and even a pre-treatment variable. We highlight the difference between endogenous selection bias, common-cause confounding, and overcontrol bias and discuss numerous examples from social stratification, cultural sociology, social network analysis, political sociology, social demography, and the sociology of education.},
+   author = {Felix Elwert and Christopher Winship},
+   doi = {10.1146/annurev-soc-071913-043455},
+   issn = {0360-0572},
+   issue = {1},
+   journal = {Annual Review of Sociology},
+   month = {7},
+   note = {doi: 10.1146/annurev-soc-071913-043455},
+   pages = {31-53},
+   publisher = {Annual Reviews},
+   title = {Endogenous Selection Bias: The Problem of Conditioning on a Collider Variable},
+   volume = {40},
+   url = {https://doi.org/10.1146/annurev-soc-071913-043455},
+   year = {2014}
+}
+
+@article{Westreich2013,
+   abstract = {It is common to present multiple adjusted effect estimates from a single model in a single table. For example, a table might show odds ratios for one or more exposures and also for several confounders from a single logistic regression. This can lead to mistaken interpretations of these estimates. We use causal diagrams to display the sources of the problems. Presentation of exposure and confounder effect estimates from a single model may lead to several interpretative difficulties, inviting confusion of direct-effect estimates with total-effect estimates for covariates in the model. These effect estimates may also be confounded even though the effect estimate for the main exposure is not confounded. Interpretation of these effect estimates is further complicated by heterogeneity (variation, modification) of the exposure effect measure across covariate levels. We offer suggestions to limit potential misunderstandings when multiple effect estimates are presented, including precise distinction between total and direct effect measures from a single model, and use of multiple models tailored to yield total-effect estimates for covariates.},
+   author = {Daniel Westreich and Sander Greenland},
+   doi = {10.1093/aje/kws412},
+   issn = {0002-9262},
+   issue = {4},
+   journal = {American Journal of Epidemiology},
+   month = {2},
+   pages = {292-298},
+   title = {The Table 2 Fallacy: Presenting and Interpreting Confounder and Modifier Coefficients},
+   volume = {177},
+   url = {https://doi.org/10.1093/aje/kws412},
+   year = {2013}
+}
+
+@InCollection{langbliese,
+  author = {Jonas W.B. Lang and Paul D. Bliese},
+  year = {in press},
+  city = {Cheltenham, UK},
+  editor = {N. Bowling and M.K. Shoss and Z. Zhou},
+  booktitle = {How to get published in the best industrial-organizational psychology journals},
+  publisher = {Edward Elgar Publishing},
+  title = {Multilevel Research Designs},
+}
+
+
