--- a/spillover-of-violence/spillover-of-violence.qmd
+++ b/spillover-of-violence/spillover-of-violence.qmd
@@ -70,7 +70,7 @@ g <- list(showframe = TRUE,
           countrycolor = toRGB("grey"),
           showocean = TRUE,
           oceancolor = "white",
-          projection = list(type = 'robinson',
+          projection = list(type = 'orthographic',
                             rotation = list(lon = -25,
                                             lat = 0,
                                             roll = 0)),
@@ -143,7 +143,11 @@ flowchart LR
   norms[norms justifying <br>violence]:::orange --> pabuse
 
   %% Links %%
+  
   linkStyle 0 stroke:#E2231A,stroke-width:2px,color:red;
+  
+  linkStyle 1 stroke:#000000,stroke-width:2px,color:black;
+
 
 ```
 :::
@@ -209,7 +213,7 @@ flowchart LR
   CP[attitudes endorsing <br>corporal punishment]:::orange --> pabuse
   
   %% Links %%
-  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+  linkStyle 0,1 stroke:#00274C,stroke-width:2px,color:red;
 
 ```
 :::
@@ -289,7 +293,7 @@ flowchart TB
   interventions --> pabuse
   
   %% Links %%
-  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+  linkStyle 0,1,2 stroke:#00274C,stroke-width:2px,color:red;
 
 ```
 :::
@@ -318,7 +322,8 @@ flowchart TB
   trauma[trauma informed <br>approaches]:::red --> interventions
   
   %% Links %%
-  linkStyle 0 stroke:#00274C,stroke-width:2px,color:E2231A;
+  
+  linkStyle 0,1,2,3 stroke:#00274C,stroke-width:2px,color:E2231A;
 
 ```
 :::
