add footnote on RCT's; add color to globe

--- a/be-less-wrong/be-less-wrong.bib
+++ b/be-less-wrong/be-less-wrong.bib
@@ -135,4 +135,33 @@ model building},
   title = {Multilevel Research Designs},
 }
 
+@Article{Diener2022,
+  abstract = {It is often claimed that only experiments can support strong causal inferences and therefore they should be privileged in the behavioral sciences. We disagree. Overvaluing experiments results in their overuse both by researchers and decision makers and in an underappreciation of their shortcomings. Neglect of other methods often follows. Experiments can suggest whether X causes Y in a specific experimental setting; however, they often fail to elucidate either the mechanisms responsible for an effect or the strength of an effect in everyday natural settings. In this article, we consider two overarching issues. First, experiments have important limitations. We highlight problems with external, construct, statistical-conclusion, and internal validity; replicability; and conceptual issues associated with simple X causes Y thinking. Second, quasi-experimental and nonexperimental methods are absolutely essential. As well as themselves estimating causal effects, these other methods can provide information and understanding that goes beyond that provided by experiments. A research program progresses best when experiments are not treated as privileged but instead are combined with these other methods.},
+  author = {Ed Diener and Robert Northcott and Michael J Zyphur and Stephen G West},
+  doi = {10.1177/17456916211037670},
+  issn = {1745-6916},
+  issue = {4},
+  journal = {Perspectives on Psychological Science},
+  month = {2},
+  note = {doi: 10.1177/17456916211037670},
+  pages = {1101-1119},
+  publisher = {SAGE Publications Inc},
+  title = {Beyond Experiments},
+  volume = {17},
+  url = {https://doi.org/10.1177/17456916211037670},
+  year = {2022},
+}
 
+@Article{Button2013,
+  abstract = {Low statistical power undermines the purpose of scientific research; it reduces the chance of detecting a true effect. Perhaps less intuitively, low power also reduces the likelihood that a statistically significant result reflects a true effect. Empirically, we estimate the median statistical power of studies in the neurosciences is between ∼8% and ∼31%. We discuss the consequences of such low statistical power, which include overestimates of effect size and low reproducibility of results. There are ethical dimensions to the problem of low power; unreliable research is inefficient and wasteful. Improving reproducibility in neuroscience is a key priority and requires attention to well-established, but often ignored, methodological principles. We discuss how problems associated with low power can be addressed by adopting current best-practice and make clear recommendations for how to achieve this.},
+  author = {Katherine S Button and John P A Ioannidis and Claire Mokrysz and Brian A Nosek and Jonathan Flint and Emma S J Robinson and Marcus R Munaf{\a`o}},
+  doi = {10.1038/nrn3475},
+  issn = {1471-0048},
+  issue = {5},
+  journal = {Nature Reviews Neuroscience},
+  pages = {365-376},
+  title = {Power failure: why small sample size undermines the reliability of neuroscience},
+  volume = {14},
+  url = {https://doi.org/10.1038/nrn3475},
+  year = {2013},
+}
