--- a/be-less-wrong/be-less-wrong.qmd
+++ b/be-less-wrong/be-less-wrong.qmd
@@ -181,7 +181,18 @@ Let's consider a simple visual model based upon some simulated data. Two key var
 :::{#cr-flowchart .scale-to-fill}
 ```{mermaid}
 flowchart LR
-  intervention(intervention) --> outcome(outcome)
+
+  classDef yellow fill:#FFC20E,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#374EA2,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef green fill:#00833D,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef orange fill:#D86018,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  intervention(intervention):::green --> outcome(outcome):::yellow
 ```
 :::
 
@@ -221,8 +232,20 @@ Let's now consider a slightly more complex model. In addition to examining the *
 :::{#cr-flowchart2 .scale-to-fill}
 ```{mermaid}
 flowchart LR
-  intervention(intervention) --> outcome(outcome)
-  group(group) --> outcome(outcome)
+
+  classDef yellow fill:#FFC20E,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#374EA2,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef green fill:#00833D,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef orange fill:#D86018,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  intervention(intervention):::green --> outcome(outcome):::yellow
+
+  group(group):::blue --> outcome(outcome)
 ```
 :::
 
