added Diez Roux citation

--- a/be-less-wrong/be-less-wrong.bib
+++ b/be-less-wrong/be-less-wrong.bib
@@ -69,6 +69,17 @@ model building},
   year = {2007},
 }
 
+@InCollection{DiezRoux2003,
+  author = {Ana {Diez Roux}},
+  city = {Dordrecht / Boston / London},
+  editor = {Daniel Courgeau},
+  booktitle = {Methodology and Epistemology of Multilevel Analysis:  Approaches from Different Social Sciences},
+  pages = {93-119},
+  publisher = {Kluwer Academic Publishers},
+  title = {Potentialities and Limitations of Multilevel Analysis in Public Health and Epidemiology},
+  year = {2003},
+}
+
 @Article{Simpson1951,
   abstract = {[The definition of second order interaction in a (2 × 2 × 2) table given by Bartlett is accepted, but it is shown by an example that the vanishing of this second order interaction does not necessarily justify the mechanical procedure of forming the three component 2 × 2 tables and testing each of these for significance by standard methods.]},
   author = {E H Simpson},
