CLARIFICATIONS RE RCT's

--- a/be-less-wrong/be-less-wrong.qmd
+++ b/be-less-wrong/be-less-wrong.qmd
@@ -334,7 +334,7 @@ My point? Simple models feel intuitive and have a commonsense appeal. Yet, with 
 
 [^controls]: Additionally, since developing this tutorial, I've also been reminded that one must be *careful* and *thoughtful* about choosing *control variables*. As a simple example, consider a hypothetical situation in which $x$ is a cause of $y$:  $x \rightarrow y$. If $m$ is a mediator of the relationship between $x$ and $y$, then including $m$ in one's statistical model changes the meaning of the estimate of $x$. $\beta_x$ is now an estimate of the *direct* effect of $x$ on $y$, accounting for the presence of $m$. There may be an *indirect* effect of $x$ on $y$ through $m$ ($x \rightarrow m \rightarrow$ y) that needs to be accounted for using special procedures [CF @Westreich2013]. Including a control variable $c$ that is a function of both $x$ and $y$ ($x \rightarrow c \ \& \ y \rightarrow$ c) may introduce additional complications [@Elwert2014]. 
 
-[^RCT]: Further, one could argue, somewhat convincingly, that an RCT (*randomized controlled trial*) would solve the major issue inspiring this presentation. By *randomly* assigning study participants to a *treatment* and *control* group, we would avoid the possibility that our results could be statistically confounded by other factors, and thus avoid the possibility that our results would *flip* or *substantially change* as we add more variables to the model. However, what is not often enough acknowledged is that RCT's are often based upon small *clinically available* or *conveniently available* samples that may not *generalize* well to other populations or people. Large observational studies with diverse populations--and models with many appropriate control variables--certainly have their role.
+[^RCT]: Further, one could argue, somewhat convincingly, that an RCT (*randomized controlled trial*) would solve the major issue inspiring this presentation. By *randomly* assigning study participants to a *treatment* and *control* group, we would avoid the possibility that our results could be statistically confounded by other factors, and thus avoid the possibility that our results would *flip* or *substantially change* as we add more variables to the model. First, it is important to remember that there are many social issues that *cannot be ethically studied* with random assignment.  Also, what is not often enough acknowledged is that RCT's are often based upon small *clinically available* or *conveniently available* samples that may not *generalize* well to other populations or people. Large observational studies with diverse populations--and models with many appropriate control variables--certainly have their role.
 
 What I have illustrated here is only one set of ideas about how we need to complicate our quantitative thinking to try to be a *little less wrong* in thinking about social problems. 
 
