added another caveat on RCT's; APA cites

--- a/be-less-wrong/be-less-wrong.bib
+++ b/be-less-wrong/be-less-wrong.bib
@@ -165,7 +165,7 @@ model building},
 
 @Article{Button2013,
   abstract = {Low statistical power undermines the purpose of scientific research; it reduces the chance of detecting a true effect. Perhaps less intuitively, low power also reduces the likelihood that a statistically significant result reflects a true effect. Empirically, we estimate the median statistical power of studies in the neurosciences is between ∼8% and ∼31%. We discuss the consequences of such low statistical power, which include overestimates of effect size and low reproducibility of results. There are ethical dimensions to the problem of low power; unreliable research is inefficient and wasteful. Improving reproducibility in neuroscience is a key priority and requires attention to well-established, but often ignored, methodological principles. We discuss how problems associated with low power can be addressed by adopting current best-practice and make clear recommendations for how to achieve this.},
-  author = {Katherine S Button and John P A Ioannidis and Claire Mokrysz and Brian A Nosek and Jonathan Flint and Emma S J Robinson and Marcus R Munaf{\a`o}},
+  author = {Katherine S Button and John P A Ioannidis and Claire Mokrysz and Brian A Nosek and Jonathan Flint and Emma S J Robinson and Marcus R Munaf\`{o}},
   doi = {10.1038/nrn3475},
   issn = {1471-0048},
   issue = {5},
