--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,8 @@ author: "Andy Grogan-Kaylor"
 format: html
 ---
 
+`closeread` *scrollytelling* projects using [https://closeread.dev/](https://closeread.dev/)
+
 * [https://globalfamilies.quarto.pub/parenting/](https://globalfamilies.quarto.pub/parenting/)
 * [https://globalfamilies.quarto.pub/be-less-wrong/](https://globalfamilies.quarto.pub/be-less-wrong/)
 * [https://globalfamilies.quarto.pub/spillover-of-violence/](https://globalfamilies.quarto.pub/spillover-of-violence/)
