added simplified version of logarithms

--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ format: html
 * [https://globalfamilies.quarto.pub/parenting/](https://globalfamilies.quarto.pub/parenting/)
 * [https://globalfamilies.quarto.pub/be-less-wrong/](https://globalfamilies.quarto.pub/be-less-wrong/)
 * [https://globalfamilies.quarto.pub/spillover-of-violence/](https://globalfamilies.quarto.pub/spillover-of-violence/)
-* [https://globalfamilies.quarto.pub/logarithms/](https://globalfamilies.quarto.pub/logarithms/)
+* [https://globalfamilies.quarto.pub/logarithms/](https://globalfamilies.quarto.pub/logarithms/) | ([simplified version](https://globalfamilies.quarto.pub/logarithms-simple/))
 
 
 
